// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="container"
      >
        <div
          className="row main-menu"
        >
          <div
            className="col-sm-3 logo-div"
          >
            <i
              className="material-icons menu-icon"
            >
              menu
            </i>
            <span
              className="logo"
            >
              <i
                className="material-icons menu-icon"
              >
                timeline
              </i>
              <span
                className="logo-text"
              >
                MovieHunt
              </span>
            </span>
          </div>
          <div
            className="col-sm-6"
          >
            <ul
              className="menu-items"
            >
              <li
                className="active"
              >
                Top Rated
              </li>
              <li>
                Movies
              </li>
              <li>
                Discover
              </li>
            </ul>
          </div>
          <div
            className="col-sm-3 login-section"
          >
            <span>
              <button
                className="btn-login"
                onClick={[Function]}
              >
                Login
              </button>
              <button
                className="btn-signup"
              >
                Sign Up
              </button>
            </span>
          </div>
        </div>
      </div>,
      "className": "header-container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="row main-menu"
        >
          <div
            className="col-sm-3 logo-div"
          >
            <i
              className="material-icons menu-icon"
            >
              menu
            </i>
            <span
              className="logo"
            >
              <i
                className="material-icons menu-icon"
              >
                timeline
              </i>
              <span
                className="logo-text"
              >
                MovieHunt
              </span>
            </span>
          </div>
          <div
            className="col-sm-6"
          >
            <ul
              className="menu-items"
            >
              <li
                className="active"
              >
                Top Rated
              </li>
              <li>
                Movies
              </li>
              <li>
                Discover
              </li>
            </ul>
          </div>
          <div
            className="col-sm-3 login-section"
          >
            <span>
              <button
                className="btn-login"
                onClick={[Function]}
              >
                Login
              </button>
              <button
                className="btn-signup"
              >
                Sign Up
              </button>
            </span>
          </div>
        </div>,
        "className": "container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-sm-3 logo-div"
            >
              <i
                className="material-icons menu-icon"
              >
                menu
              </i>
              <span
                className="logo"
              >
                <i
                  className="material-icons menu-icon"
                >
                  timeline
                </i>
                <span
                  className="logo-text"
                >
                  MovieHunt
                </span>
              </span>
            </div>,
            <div
              className="col-sm-6"
            >
              <ul
                className="menu-items"
              >
                <li
                  className="active"
                >
                  Top Rated
                </li>
                <li>
                  Movies
                </li>
                <li>
                  Discover
                </li>
              </ul>
            </div>,
            <div
              className="col-sm-3 login-section"
            >
              <span>
                <button
                  className="btn-login"
                  onClick={[Function]}
                >
                  Login
                </button>
                <button
                  className="btn-signup"
                >
                  Sign Up
                </button>
              </span>
            </div>,
          ],
          "className": "row main-menu",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <i
                  className="material-icons menu-icon"
                >
                  menu
                </i>,
                <span
                  className="logo"
                >
                  <i
                    className="material-icons menu-icon"
                  >
                    timeline
                  </i>
                  <span
                    className="logo-text"
                  >
                    MovieHunt
                  </span>
                </span>,
              ],
              "className": "col-sm-3 logo-div",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "menu",
                  "className": "material-icons menu-icon",
                },
                "ref": null,
                "rendered": "menu",
                "type": "i",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <i
                      className="material-icons menu-icon"
                    >
                      timeline
                    </i>,
                    <span
                      className="logo-text"
                    >
                      MovieHunt
                    </span>,
                  ],
                  "className": "logo",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "timeline",
                      "className": "material-icons menu-icon",
                    },
                    "ref": null,
                    "rendered": "timeline",
                    "type": "i",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "MovieHunt",
                      "className": "logo-text",
                    },
                    "ref": null,
                    "rendered": "MovieHunt",
                    "type": "span",
                  },
                ],
                "type": "span",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ul
                className="menu-items"
              >
                <li
                  className="active"
                >
                  Top Rated
                </li>
                <li>
                  Movies
                </li>
                <li>
                  Discover
                </li>
              </ul>,
              "className": "col-sm-6",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <li
                    className="active"
                  >
                    Top Rated
                  </li>,
                  <li>
                    Movies
                  </li>,
                  <li>
                    Discover
                  </li>,
                ],
                "className": "menu-items",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Top Rated",
                    "className": "active",
                  },
                  "ref": null,
                  "rendered": "Top Rated",
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Movies",
                  },
                  "ref": null,
                  "rendered": "Movies",
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Discover",
                  },
                  "ref": null,
                  "rendered": "Discover",
                  "type": "li",
                },
              ],
              "type": "ul",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <span>
                <button
                  className="btn-login"
                  onClick={[Function]}
                >
                  Login
                </button>
                <button
                  className="btn-signup"
                >
                  Sign Up
                </button>
              </span>,
              "className": "col-sm-3 login-section",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="btn-login"
                    onClick={[Function]}
                  >
                    Login
                  </button>,
                  <button
                    className="btn-signup"
                  >
                    Sign Up
                  </button>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Login",
                    "className": "btn-login",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "Login",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Sign Up",
                    "className": "btn-signup",
                  },
                  "ref": null,
                  "rendered": "Sign Up",
                  "type": "button",
                },
              ],
              "type": "span",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="container"
        >
          <div
            className="row main-menu"
          >
            <div
              className="col-sm-3 logo-div"
            >
              <i
                className="material-icons menu-icon"
              >
                menu
              </i>
              <span
                className="logo"
              >
                <i
                  className="material-icons menu-icon"
                >
                  timeline
                </i>
                <span
                  className="logo-text"
                >
                  MovieHunt
                </span>
              </span>
            </div>
            <div
              className="col-sm-6"
            >
              <ul
                className="menu-items"
              >
                <li
                  className="active"
                >
                  Top Rated
                </li>
                <li>
                  Movies
                </li>
                <li>
                  Discover
                </li>
              </ul>
            </div>
            <div
              className="col-sm-3 login-section"
            >
              <span>
                <button
                  className="btn-login"
                  onClick={[Function]}
                >
                  Login
                </button>
                <button
                  className="btn-signup"
                >
                  Sign Up
                </button>
              </span>
            </div>
          </div>
        </div>,
        "className": "header-container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="row main-menu"
          >
            <div
              className="col-sm-3 logo-div"
            >
              <i
                className="material-icons menu-icon"
              >
                menu
              </i>
              <span
                className="logo"
              >
                <i
                  className="material-icons menu-icon"
                >
                  timeline
                </i>
                <span
                  className="logo-text"
                >
                  MovieHunt
                </span>
              </span>
            </div>
            <div
              className="col-sm-6"
            >
              <ul
                className="menu-items"
              >
                <li
                  className="active"
                >
                  Top Rated
                </li>
                <li>
                  Movies
                </li>
                <li>
                  Discover
                </li>
              </ul>
            </div>
            <div
              className="col-sm-3 login-section"
            >
              <span>
                <button
                  className="btn-login"
                  onClick={[Function]}
                >
                  Login
                </button>
                <button
                  className="btn-signup"
                >
                  Sign Up
                </button>
              </span>
            </div>
          </div>,
          "className": "container",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-sm-3 logo-div"
              >
                <i
                  className="material-icons menu-icon"
                >
                  menu
                </i>
                <span
                  className="logo"
                >
                  <i
                    className="material-icons menu-icon"
                  >
                    timeline
                  </i>
                  <span
                    className="logo-text"
                  >
                    MovieHunt
                  </span>
                </span>
              </div>,
              <div
                className="col-sm-6"
              >
                <ul
                  className="menu-items"
                >
                  <li
                    className="active"
                  >
                    Top Rated
                  </li>
                  <li>
                    Movies
                  </li>
                  <li>
                    Discover
                  </li>
                </ul>
              </div>,
              <div
                className="col-sm-3 login-section"
              >
                <span>
                  <button
                    className="btn-login"
                    onClick={[Function]}
                  >
                    Login
                  </button>
                  <button
                    className="btn-signup"
                  >
                    Sign Up
                  </button>
                </span>
              </div>,
            ],
            "className": "row main-menu",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <i
                    className="material-icons menu-icon"
                  >
                    menu
                  </i>,
                  <span
                    className="logo"
                  >
                    <i
                      className="material-icons menu-icon"
                    >
                      timeline
                    </i>
                    <span
                      className="logo-text"
                    >
                      MovieHunt
                    </span>
                  </span>,
                ],
                "className": "col-sm-3 logo-div",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "menu",
                    "className": "material-icons menu-icon",
                  },
                  "ref": null,
                  "rendered": "menu",
                  "type": "i",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <i
                        className="material-icons menu-icon"
                      >
                        timeline
                      </i>,
                      <span
                        className="logo-text"
                      >
                        MovieHunt
                      </span>,
                    ],
                    "className": "logo",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "timeline",
                        "className": "material-icons menu-icon",
                      },
                      "ref": null,
                      "rendered": "timeline",
                      "type": "i",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "MovieHunt",
                        "className": "logo-text",
                      },
                      "ref": null,
                      "rendered": "MovieHunt",
                      "type": "span",
                    },
                  ],
                  "type": "span",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <ul
                  className="menu-items"
                >
                  <li
                    className="active"
                  >
                    Top Rated
                  </li>
                  <li>
                    Movies
                  </li>
                  <li>
                    Discover
                  </li>
                </ul>,
                "className": "col-sm-6",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <li
                      className="active"
                    >
                      Top Rated
                    </li>,
                    <li>
                      Movies
                    </li>,
                    <li>
                      Discover
                    </li>,
                  ],
                  "className": "menu-items",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Top Rated",
                      "className": "active",
                    },
                    "ref": null,
                    "rendered": "Top Rated",
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Movies",
                    },
                    "ref": null,
                    "rendered": "Movies",
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Discover",
                    },
                    "ref": null,
                    "rendered": "Discover",
                    "type": "li",
                  },
                ],
                "type": "ul",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <span>
                  <button
                    className="btn-login"
                    onClick={[Function]}
                  >
                    Login
                  </button>
                  <button
                    className="btn-signup"
                  >
                    Sign Up
                  </button>
                </span>,
                "className": "col-sm-3 login-section",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <button
                      className="btn-login"
                      onClick={[Function]}
                    >
                      Login
                    </button>,
                    <button
                      className="btn-signup"
                    >
                      Sign Up
                    </button>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Login",
                      "className": "btn-login",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "Login",
                    "type": "button",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Sign Up",
                      "className": "btn-signup",
                    },
                    "ref": null,
                    "rendered": "Sign Up",
                    "type": "button",
                  },
                ],
                "type": "span",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Header simulating Login button click 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="container"
      >
        <div
          className="row main-menu"
        >
          <div
            className="col-sm-3 logo-div"
          >
            <i
              className="material-icons menu-icon"
            >
              menu
            </i>
            <span
              className="logo"
            >
              <i
                className="material-icons menu-icon"
              >
                timeline
              </i>
              <span
                className="logo-text"
              >
                MovieHunt
              </span>
            </span>
          </div>
          <div
            className="col-sm-6"
          >
            <ul
              className="menu-items"
            >
              <li
                className="active"
              >
                Top Rated
              </li>
              <li>
                Movies
              </li>
              <li>
                Discover
              </li>
            </ul>
          </div>
          <div
            className="col-sm-3 login-section"
          >
            <span>
              <button
                className="btn-add"
              >
                <i
                  class="material-icons menu-icon"
                >
                  add
                </i>
                Add Movie
              </button>
              <img
                alt="User Avatar"
                className="avatar-img"
                src="http://www.gravatar.com/avatar/4986132725905e951d64a41340178e63?s=200&r=pg&d=mm"
              />
            </span>
          </div>
        </div>
      </div>,
      "className": "header-container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="row main-menu"
        >
          <div
            className="col-sm-3 logo-div"
          >
            <i
              className="material-icons menu-icon"
            >
              menu
            </i>
            <span
              className="logo"
            >
              <i
                className="material-icons menu-icon"
              >
                timeline
              </i>
              <span
                className="logo-text"
              >
                MovieHunt
              </span>
            </span>
          </div>
          <div
            className="col-sm-6"
          >
            <ul
              className="menu-items"
            >
              <li
                className="active"
              >
                Top Rated
              </li>
              <li>
                Movies
              </li>
              <li>
                Discover
              </li>
            </ul>
          </div>
          <div
            className="col-sm-3 login-section"
          >
            <span>
              <button
                className="btn-add"
              >
                <i
                  class="material-icons menu-icon"
                >
                  add
                </i>
                Add Movie
              </button>
              <img
                alt="User Avatar"
                className="avatar-img"
                src="http://www.gravatar.com/avatar/4986132725905e951d64a41340178e63?s=200&r=pg&d=mm"
              />
            </span>
          </div>
        </div>,
        "className": "container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-sm-3 logo-div"
            >
              <i
                className="material-icons menu-icon"
              >
                menu
              </i>
              <span
                className="logo"
              >
                <i
                  className="material-icons menu-icon"
                >
                  timeline
                </i>
                <span
                  className="logo-text"
                >
                  MovieHunt
                </span>
              </span>
            </div>,
            <div
              className="col-sm-6"
            >
              <ul
                className="menu-items"
              >
                <li
                  className="active"
                >
                  Top Rated
                </li>
                <li>
                  Movies
                </li>
                <li>
                  Discover
                </li>
              </ul>
            </div>,
            <div
              className="col-sm-3 login-section"
            >
              <span>
                <button
                  className="btn-add"
                >
                  <i
                    class="material-icons menu-icon"
                  >
                    add
                  </i>
                  Add Movie
                </button>
                <img
                  alt="User Avatar"
                  className="avatar-img"
                  src="http://www.gravatar.com/avatar/4986132725905e951d64a41340178e63?s=200&r=pg&d=mm"
                />
              </span>
            </div>,
          ],
          "className": "row main-menu",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <i
                  className="material-icons menu-icon"
                >
                  menu
                </i>,
                <span
                  className="logo"
                >
                  <i
                    className="material-icons menu-icon"
                  >
                    timeline
                  </i>
                  <span
                    className="logo-text"
                  >
                    MovieHunt
                  </span>
                </span>,
              ],
              "className": "col-sm-3 logo-div",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "menu",
                  "className": "material-icons menu-icon",
                },
                "ref": null,
                "rendered": "menu",
                "type": "i",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <i
                      className="material-icons menu-icon"
                    >
                      timeline
                    </i>,
                    <span
                      className="logo-text"
                    >
                      MovieHunt
                    </span>,
                  ],
                  "className": "logo",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "timeline",
                      "className": "material-icons menu-icon",
                    },
                    "ref": null,
                    "rendered": "timeline",
                    "type": "i",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "MovieHunt",
                      "className": "logo-text",
                    },
                    "ref": null,
                    "rendered": "MovieHunt",
                    "type": "span",
                  },
                ],
                "type": "span",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ul
                className="menu-items"
              >
                <li
                  className="active"
                >
                  Top Rated
                </li>
                <li>
                  Movies
                </li>
                <li>
                  Discover
                </li>
              </ul>,
              "className": "col-sm-6",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <li
                    className="active"
                  >
                    Top Rated
                  </li>,
                  <li>
                    Movies
                  </li>,
                  <li>
                    Discover
                  </li>,
                ],
                "className": "menu-items",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Top Rated",
                    "className": "active",
                  },
                  "ref": null,
                  "rendered": "Top Rated",
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Movies",
                  },
                  "ref": null,
                  "rendered": "Movies",
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Discover",
                  },
                  "ref": null,
                  "rendered": "Discover",
                  "type": "li",
                },
              ],
              "type": "ul",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <span>
                <button
                  className="btn-add"
                >
                  <i
                    class="material-icons menu-icon"
                  >
                    add
                  </i>
                  Add Movie
                </button>
                <img
                  alt="User Avatar"
                  className="avatar-img"
                  src="http://www.gravatar.com/avatar/4986132725905e951d64a41340178e63?s=200&r=pg&d=mm"
                />
              </span>,
              "className": "col-sm-3 login-section",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="btn-add"
                  >
                    <i
                      class="material-icons menu-icon"
                    >
                      add
                    </i>
                    Add Movie
                  </button>,
                  <img
                    alt="User Avatar"
                    className="avatar-img"
                    src="http://www.gravatar.com/avatar/4986132725905e951d64a41340178e63?s=200&r=pg&d=mm"
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <i
                        class="material-icons menu-icon"
                      >
                        add
                      </i>,
                      "Add Movie",
                    ],
                    "className": "btn-add",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "add",
                        "class": "material-icons menu-icon",
                      },
                      "ref": null,
                      "rendered": "add",
                      "type": "i",
                    },
                    "Add Movie",
                  ],
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "alt": "User Avatar",
                    "className": "avatar-img",
                    "src": "http://www.gravatar.com/avatar/4986132725905e951d64a41340178e63?s=200&r=pg&d=mm",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "img",
                },
              ],
              "type": "span",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="container"
        >
          <div
            className="row main-menu"
          >
            <div
              className="col-sm-3 logo-div"
            >
              <i
                className="material-icons menu-icon"
              >
                menu
              </i>
              <span
                className="logo"
              >
                <i
                  className="material-icons menu-icon"
                >
                  timeline
                </i>
                <span
                  className="logo-text"
                >
                  MovieHunt
                </span>
              </span>
            </div>
            <div
              className="col-sm-6"
            >
              <ul
                className="menu-items"
              >
                <li
                  className="active"
                >
                  Top Rated
                </li>
                <li>
                  Movies
                </li>
                <li>
                  Discover
                </li>
              </ul>
            </div>
            <div
              className="col-sm-3 login-section"
            >
              <span>
                <button
                  className="btn-add"
                >
                  <i
                    class="material-icons menu-icon"
                  >
                    add
                  </i>
                  Add Movie
                </button>
                <img
                  alt="User Avatar"
                  className="avatar-img"
                  src="http://www.gravatar.com/avatar/4986132725905e951d64a41340178e63?s=200&r=pg&d=mm"
                />
              </span>
            </div>
          </div>
        </div>,
        "className": "header-container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="row main-menu"
          >
            <div
              className="col-sm-3 logo-div"
            >
              <i
                className="material-icons menu-icon"
              >
                menu
              </i>
              <span
                className="logo"
              >
                <i
                  className="material-icons menu-icon"
                >
                  timeline
                </i>
                <span
                  className="logo-text"
                >
                  MovieHunt
                </span>
              </span>
            </div>
            <div
              className="col-sm-6"
            >
              <ul
                className="menu-items"
              >
                <li
                  className="active"
                >
                  Top Rated
                </li>
                <li>
                  Movies
                </li>
                <li>
                  Discover
                </li>
              </ul>
            </div>
            <div
              className="col-sm-3 login-section"
            >
              <span>
                <button
                  className="btn-add"
                >
                  <i
                    class="material-icons menu-icon"
                  >
                    add
                  </i>
                  Add Movie
                </button>
                <img
                  alt="User Avatar"
                  className="avatar-img"
                  src="http://www.gravatar.com/avatar/4986132725905e951d64a41340178e63?s=200&r=pg&d=mm"
                />
              </span>
            </div>
          </div>,
          "className": "container",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-sm-3 logo-div"
              >
                <i
                  className="material-icons menu-icon"
                >
                  menu
                </i>
                <span
                  className="logo"
                >
                  <i
                    className="material-icons menu-icon"
                  >
                    timeline
                  </i>
                  <span
                    className="logo-text"
                  >
                    MovieHunt
                  </span>
                </span>
              </div>,
              <div
                className="col-sm-6"
              >
                <ul
                  className="menu-items"
                >
                  <li
                    className="active"
                  >
                    Top Rated
                  </li>
                  <li>
                    Movies
                  </li>
                  <li>
                    Discover
                  </li>
                </ul>
              </div>,
              <div
                className="col-sm-3 login-section"
              >
                <span>
                  <button
                    className="btn-add"
                  >
                    <i
                      class="material-icons menu-icon"
                    >
                      add
                    </i>
                    Add Movie
                  </button>
                  <img
                    alt="User Avatar"
                    className="avatar-img"
                    src="http://www.gravatar.com/avatar/4986132725905e951d64a41340178e63?s=200&r=pg&d=mm"
                  />
                </span>
              </div>,
            ],
            "className": "row main-menu",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <i
                    className="material-icons menu-icon"
                  >
                    menu
                  </i>,
                  <span
                    className="logo"
                  >
                    <i
                      className="material-icons menu-icon"
                    >
                      timeline
                    </i>
                    <span
                      className="logo-text"
                    >
                      MovieHunt
                    </span>
                  </span>,
                ],
                "className": "col-sm-3 logo-div",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "menu",
                    "className": "material-icons menu-icon",
                  },
                  "ref": null,
                  "rendered": "menu",
                  "type": "i",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <i
                        className="material-icons menu-icon"
                      >
                        timeline
                      </i>,
                      <span
                        className="logo-text"
                      >
                        MovieHunt
                      </span>,
                    ],
                    "className": "logo",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "timeline",
                        "className": "material-icons menu-icon",
                      },
                      "ref": null,
                      "rendered": "timeline",
                      "type": "i",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "MovieHunt",
                        "className": "logo-text",
                      },
                      "ref": null,
                      "rendered": "MovieHunt",
                      "type": "span",
                    },
                  ],
                  "type": "span",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <ul
                  className="menu-items"
                >
                  <li
                    className="active"
                  >
                    Top Rated
                  </li>
                  <li>
                    Movies
                  </li>
                  <li>
                    Discover
                  </li>
                </ul>,
                "className": "col-sm-6",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <li
                      className="active"
                    >
                      Top Rated
                    </li>,
                    <li>
                      Movies
                    </li>,
                    <li>
                      Discover
                    </li>,
                  ],
                  "className": "menu-items",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Top Rated",
                      "className": "active",
                    },
                    "ref": null,
                    "rendered": "Top Rated",
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Movies",
                    },
                    "ref": null,
                    "rendered": "Movies",
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Discover",
                    },
                    "ref": null,
                    "rendered": "Discover",
                    "type": "li",
                  },
                ],
                "type": "ul",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <span>
                  <button
                    className="btn-add"
                  >
                    <i
                      class="material-icons menu-icon"
                    >
                      add
                    </i>
                    Add Movie
                  </button>
                  <img
                    alt="User Avatar"
                    className="avatar-img"
                    src="http://www.gravatar.com/avatar/4986132725905e951d64a41340178e63?s=200&r=pg&d=mm"
                  />
                </span>,
                "className": "col-sm-3 login-section",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <button
                      className="btn-add"
                    >
                      <i
                        class="material-icons menu-icon"
                      >
                        add
                      </i>
                      Add Movie
                    </button>,
                    <img
                      alt="User Avatar"
                      className="avatar-img"
                      src="http://www.gravatar.com/avatar/4986132725905e951d64a41340178e63?s=200&r=pg&d=mm"
                    />,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <i
                          class="material-icons menu-icon"
                        >
                          add
                        </i>,
                        "Add Movie",
                      ],
                      "className": "btn-add",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "add",
                          "class": "material-icons menu-icon",
                        },
                        "ref": null,
                        "rendered": "add",
                        "type": "i",
                      },
                      "Add Movie",
                    ],
                    "type": "button",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "alt": "User Avatar",
                      "className": "avatar-img",
                      "src": "http://www.gravatar.com/avatar/4986132725905e951d64a41340178e63?s=200&r=pg&d=mm",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "img",
                  },
                ],
                "type": "span",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
